[tool.poetry]
name = "pantos-service-node"
version = "3.0.0"
description = "Pantos Service Node (reference implementation)"
authors = ["Pantos GmbH <contact@pantos.io>"]
license = "GPL-3.0-only"
readme = "README.md"
packages = [
    { include = "pantos"}
]

[tool.setuptools.packages.find]
where = ["."]
include = ["pantos"]
namespaces = true

[tool.poetry.group.test.dependencies]
pytest = "8.3.4"
pytest-cov = "6.0.0"
pytest-mock = "3.14.0"
eth-tester = "0.9.0b1"
web3 = {extras = ["tester"], version = "^6.5.0"}

[tool.poetry.group.lint.dependencies]
bandit = "1.8.2"
flake8 = "7.1.1"
isort = "6.0.0"
mypy = "1.0.1"
types-pyyaml = "6.0.12.20241230"
types-requests = "^2.32.0.20240622"
types-sqlalchemy = "^1.4.53.38"
yapf = "0.43.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "4.1.0"


[tool.poetry.group.docs.dependencies]
apispec = "^6.7.1"
apispec-webframeworks = "^1.2.0"
flasgger = "^0.9.7.1"

[tool.poetry.dependencies]
python = "^3.13"
pantos-common = "6.0.1"
alembic = "1.14.1"
celery = "5.3.1"
Cerberus = "1.3.4"
Flask = "3.1.0"
Flask-Cors = "5.0.0"
Flask-RESTful = "0.3.10"
marshmallow = "3.26.1"
psycopg = {extras = ["binary", "pool"], version = "3.2.4"}
PyYAML = "6.0.1"
SQLAlchemy = "2.0.38"
web3 = "6.5.0"
JSON-log-formatter = "0.5.2"
pyaml-env = "1.2.1"
python-dotenv = "1.0.1"
hexbytes = "1.2.1"
semantic-version = "2.10.0"
gunicorn = ">=22,<24"
requests = "^2.32.3"
flower = "^2.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
